; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/debounce/extr_eager_pk.c_update_debounce_counters.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/debounce/extr_eager_pk.c_update_debounce_counters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@counters_need_update = common dso_local global i32 0, align 4
@debounce_counters = common dso_local global i64* null, align 8
@MATRIX_COLS = common dso_local global i64 0, align 8
@DEBOUNCE_ELAPSED = common dso_local global i64 0, align 8
@MAX_DEBOUNCE = common dso_local global i32 0, align 4
@DEBOUNCE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_debounce_counters(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 0, i32* @counters_need_update, align 4
  %8 = load i64*, i64** @debounce_counters, align 8
  store i64* %8, i64** %5, align 8
  store i64 0, i64* %6, align 8
  br label %9

9:                                                ; preds = %43, %2
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* %3, align 8
  %12 = icmp slt i64 %10, %11
  br i1 %12, label %13, label %46

13:                                               ; preds = %9
  store i64 0, i64* %7, align 8
  br label %14

14:                                               ; preds = %39, %13
  %15 = load i64, i64* %7, align 8
  %16 = load i64, i64* @MATRIX_COLS, align 8
  %17 = icmp slt i64 %15, %16
  br i1 %17, label %18, label %42

18:                                               ; preds = %14
  %19 = load i64*, i64** %5, align 8
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @DEBOUNCE_ELAPSED, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %36

23:                                               ; preds = %18
  %24 = load i64, i64* %4, align 8
  %25 = load i64*, i64** %5, align 8
  %26 = load i64, i64* %25, align 8
  %27 = load i32, i32* @MAX_DEBOUNCE, align 4
  %28 = call i64 @TIMER_DIFF(i64 %24, i64 %26, i32 %27)
  %29 = load i64, i64* @DEBOUNCE, align 8
  %30 = icmp sge i64 %28, %29
  br i1 %30, label %31, label %34

31:                                               ; preds = %23
  %32 = load i64, i64* @DEBOUNCE_ELAPSED, align 8
  %33 = load i64*, i64** %5, align 8
  store i64 %32, i64* %33, align 8
  br label %35

34:                                               ; preds = %23
  store i32 1, i32* @counters_need_update, align 4
  br label %35

35:                                               ; preds = %34, %31
  br label %36

36:                                               ; preds = %35, %18
  %37 = load i64*, i64** %5, align 8
  %38 = getelementptr inbounds i64, i64* %37, i32 1
  store i64* %38, i64** %5, align 8
  br label %39

39:                                               ; preds = %36
  %40 = load i64, i64* %7, align 8
  %41 = add nsw i64 %40, 1
  store i64 %41, i64* %7, align 8
  br label %14

42:                                               ; preds = %14
  br label %43

43:                                               ; preds = %42
  %44 = load i64, i64* %6, align 8
  %45 = add nsw i64 %44, 1
  store i64 %45, i64* %6, align 8
  br label %9

46:                                               ; preds = %9
  ret void
}

declare dso_local i64 @TIMER_DIFF(i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
